--- a/batalla_naval/Gemfile
+++ b/batalla_naval/Gemfile
@@ -29,14 +29,17 @@ end
 # Padrino Stable Gem
 gem 'padrino', '0.11.2'
 
-group :development, :test do
-  gem 'dm-sqlite-adapter'
+group :test do
   gem 'cucumber'
   gem 'capybara'
   gem 'rspec_junit_formatter'
   gem 'rspec'
   gem 'simplecov', "0.8.0.pre"
   gem 'rack-test', :require => 'rack/test'
+end
+
+group :development, :test do
+  gem 'dm-sqlite-adapter'
 end
 
 group :development do
