--- a/batalla_naval/Rakefile
+++ b/batalla_naval/Rakefile
@@ -1,7 +1,7 @@
 require 'bundler/setup'
 require 'bundler'
 require 'rake'
-require 'padrino-core/cli/rake'
+#require 'padrino-core/cli/rake'
 
 PADRINO_ENV  = ENV['PADRINO_ENV'] ||= ENV['RACK_ENV'] ||= 'test'  unless defined?(PADRINO_ENV)
 
