--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ rvm:
   - 2.2.1
 sudo: required
 before_script: "chmod +x build_all.sh"
+before_install:
+  - apt-get update -qq
+  - apt-get install -qq postgresql-server-dev-9.3
 script: "./build_all.sh"
