--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rvm:
 sudo: required
 before_script: "chmod +x build_all.sh"
 before_install:
-  - apt-get update -qq
-  - apt-get install -qq postgresql-server-dev-9.3
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq postgresql-server-dev-9.3
 script: "./build_all.sh"
